--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@zolyn/vuepress-plugin-waline",
-    "version": "1.1.0-beta.13",
+    "version": "1.1.0-rc.1",
     "main": "index.js",
     "author": "Zorin",
     "license": "MIT",
